Remove general from icon names (#112)
* Remove general from icon names

* Update new references to old icon names

* Fix icon references in menuButtons test

--- a/pattern-library/src/icons/css/index.css
+++ b/pattern-library/src/icons/css/index.css
@@ -7,31 +7,31 @@
   fill: currentColor;
 }
 
-.icon-general-tk-logo {
+.icon-tk-logo {
   width: 3.083984375em;
 }
 
-.icon-general-caret-right {
+.icon-caret-right {
   width: 0.408203125em;
 }
 
-.icon-general-caret-left {
+.icon-caret-left {
   width: 0.408203125em;
 }
 
-.icon-general-xo-logo {
+.icon-xo-logo {
   width: 4.669921875em;
 }
 
-.icon-general-tn-logo {
+.icon-tn-logo {
   width: 4.603515625em;
 }
 
-.icon-general-tb-logo {
+.icon-tb-logo {
   width: 1.810546875em;
 }
 
-.icon-general-k-logo {
+.icon-k-logo {
   width: 0.5625em;
 }
 
