--- a/pattern-library/src/icons/legacy-icons.scss
+++ b/pattern-library/src/icons/legacy-icons.scss
@@ -16,27 +16,27 @@
 }
 
 
-.icon-general-bow::before {
+.icon-bow::before {
   content: '\e900';
 }
 
-.icon-general-lightbulb::before {
+.icon-lightbulb::before {
   content: '\e901';
 }
 
-.icon-general-storefront::before {
+.icon-storefront::before {
   content: '\e902';
 }
 
-.icon-general-camera::before {
+.icon-camera::before {
   content: '\e903';
 }
 
-.icon-general-toolbox::before {
+.icon-toolbox::before {
   content: '\e904';
 }
 
-.icon-general-wedding-dress::before {
+.icon-wedding-dress::before {
   content: '\e905';
 }
 
@@ -172,23 +172,23 @@
   content: '\e626';
 }
 
-.icon-general-grid::before {
+.icon-grid::before {
   content: '\e624';
 }
 
-.icon-general-single::before {
+.icon-single::before {
   content: '\e625';
 }
 
-.icon-general-radio-selected::before {
+.icon-radio-selected::before {
   content: '\e622';
 }
 
-.icon-general-checkbox-selected::before {
+.icon-checkbox-selected::before {
   content: '\e623';
 }
 
-.icon-general-selected-state::before {
+.icon-selected-state::before {
   content: '\e61f';
 }
 
@@ -197,68 +197,68 @@
 }
 
 @value caret-up '\e61d';
-.icon-general-caret-up::before {
+.icon-caret-up::before {
   content: caret-up;
 }
 
 @value caret-down '\e61e';
-.icon-general-caret-down::before {
+.icon-caret-down::before {
   content: caret-down;
 }
 
-.icon-general-radio-selected-state::before {
+.icon-radio-selected-state::before {
   content: '\e61a';
 }
 
-.icon-general-k-logo::before {
+.icon-k-logo::before {
   content: '\e61b';
 }
 
-.icon-general-checkmark-selected-state::before {
+.icon-checkmark-selected-state::before {
   content: '\e61c';
 }
 
-.icon-general-settings::before {
+.icon-settings::before {
   content: '\e618';
 }
 
-.icon-general-calendar::before {
+.icon-calendar::before {
   content: '\e619';
 }
 
-.icon-general-xo-logo::before {
+.icon-xo-logo::before {
   content: '\e610';
 }
 
-.icon-general-tn-logo::before {
+.icon-tn-logo::before {
   content: '\e611';
 }
 
-.icon-general-tb-logo::before {
+.icon-tb-logo::before {
   content: '\e612';
 }
 
-.icon-general-print::before {
+.icon-print::before {
   content: '\e614';
 }
 
-.icon-general-info::before {
+.icon-info::before {
   content: '\e615';
 }
 
-.icon-general-heart-filled::before {
+.icon-heart-filled::before {
   content: '\e616';
 }
 
-.icon-general-arrow-angle::before {
+.icon-arrow-angle::before {
   content: '\e617';
 }
 
-.icon-general-star-filled::before {
+.icon-star-filled::before {
   content: '\e60f';
 }
 
-.icon-general-close::before {
+.icon-close::before {
   content: '\e020';
 }
 
@@ -274,7 +274,7 @@
   content: '\e025';
 }
 
-.icon-general-edit::before {
+.icon-edit::before {
   content: '\e60a';
 }
 
@@ -282,7 +282,7 @@
   content: '\e026';
 }
 
-.icon-general-refresh::before {
+.icon-refresh::before {
   content: '\e60e';
 }
 
@@ -322,11 +322,11 @@
   content: '\e036';
 }
 
-.icon-general-star::before {
+.icon-star::before {
   content: '\e017';
 }
 
-.icon-general-current-location::before {
+.icon-current-location::before {
   content: '\e014';
 }
 
@@ -334,7 +334,7 @@
   content: '\e021';
 }
 
-.icon-general-map::before {
+.icon-map::before {
   content: '\e012';
 }
 
@@ -342,11 +342,11 @@
   content: '\e027';
 }
 
-.icon-general-filter::before {
+.icon-filter::before {
   content: '\e03c';
 }
 
-.icon-general-caret-right::before {
+.icon-caret-right::before {
   content: '\e018';
 }
 
@@ -422,27 +422,27 @@
   content: '\e031';
 }
 
-.icon-general-tk-logo::before {
+.icon-tk-logo::before {
   content: '\e00a';
 }
 
-.icon-general-phone::before {
+.icon-phone::before {
   content: '\e01c';
 }
 
-.icon-general-heart::before {
+.icon-heart::before {
   content: '\e010';
 }
 
-.icon-general-hamburger::before {
+.icon-hamburger::before {
   content: '\e00c';
 }
 
-.icon-general-search::before {
+.icon-search::before {
   content: '\e00b';
 }
 
-.icon-general-caret-left::before {
+.icon-caret-left::before {
   content: '\e03e';
 }
 
@@ -454,11 +454,11 @@
   content: '\e028';
 }
 
-.icon-general-email::before {
+.icon-email::before {
   content: '\e01e';
 }
 
-.icon-general-share::before {
+.icon-share::before {
   content: '\e01f';
 }
 
@@ -470,7 +470,7 @@
   content: '\e03a';
 }
 
-.icon-general-tag::before {
+.icon-tag::before {
   content: '\e601';
 }
 
@@ -482,7 +482,7 @@
   content: '\e602';
 }
 
-.icon-general-plus::before {
+.icon-plus::before {
   content: '\e604';
 }
 
@@ -502,7 +502,7 @@
   content: '\e607';
 }
 
-.icon-general-arrow::before {
+.icon-arrow::before {
   content: '\e608';
 }
 
@@ -526,7 +526,7 @@
   content: '\e609';
 }
 
-.icon-general-minus::before {
+.icon-minus::before {
   content: '\e628';
 }
 
@@ -570,6 +570,6 @@
   content: '\e613';
 }
 
-.icon-general-checkmark::before {
+.icon-checkmark::before {
   content: '\e621';
 }
