Footer social section (#140)
* Social secion look

* Rename follow-us section to social-section

* Refactor css

* Fix lint build

* Add tests for Social section

* Fix lint build and introduce @xo-union/component-elements

The elements package just provides a wrapper around built in elements
It serves as a way to centralize/standardize handling of certain props.
For example: The Anchor component in
@xo-union/component-elements/lib/anchor adds a `rel="noopener noreferrer"`
attribute to anchors with a `target="_blank"` property

* Refactor

- Fix nav-link class name
- Make implementation of component-elements/anchor more declarative by
reducing the component's purpose just focused on NewWindowAnchors

* Rename component-elements to component-standard-elements

Additionally:
  - Silenced some lint warnings and configure package to make package
  tests pass

* Fix focused state on social icons

* Make all brand urls NewWindowAnchor(s)

* Fix links to relative paths

Additionally, cleaned up code for brand nav items

* Remove unused prop

* Fix lint build

* Remove font scale modules that have no effect

* Use babel-runtime to reduce module sizes (#142)

--- a/packages/@xo-union/tk-component-header-nav/src/css/header-nav.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/header-nav.scss
@@ -25,7 +25,7 @@
 }
 
 .desktop-header-nav {
-  composes: sans-serif-med font-down-2 from '@xo-union/tk-css-typography';
+  composes: sans-serif font-down-2 from '@xo-union/tk-css-typography';
   composes: popup-hide from './dropdown';
   composes: nav-text-color;
 
