--- a/packages/@xo-union/tk-component-footer-nav/src/css/index.scss
+++ b/packages/@xo-union/tk-component-footer-nav/src/css/index.scss
@@ -1,88 +1,23 @@
-@value ( safe-gray-5 ) from '@xo-union/tk-css-colors';
-@value non-standard-footer-gray from './colors';
+@value (
+  social-nav-item,
+  social-icon-container,
+  centered-icon,
+  follow-us-nav-item,
+  follow-us,
+  social-section
+) from './social-section';
 
-.footer {
-  composes: font-down-1 from '@xo-union/tk-css-typography';
-  composes: safe-gray-5-fg from '@xo-union/tk-css-colors/lib/utilities';
+@value ( application-section ) from './application-section';
 
-  a {
-    color: inherit;
-  }
-}
+@value (
+  business-section,
+  xo-logo,
+  tb-logo,
+  sister-sites-nav-item,
+  heart-icon,
+  divider,
+  keep-vertical-position
+) from './business-section';
 
-.section {
-  padding: .6rem .6rem;
-}
-
-.business-section {
-  composes: section;
-  composes: align-bottom from '@xo-union/tk-css-utilities/lib/vertical-align';
-
-  background-color: non-standard-footer-gray;
-}
-
-.application-section {
-  composes: section;
-  composes: background-gray-8-bg from '@xo-union/tk-css-colors/lib/utilities';
-  composes: flex-wrap from '@xo-union/tk-css-utilities/lib/flexbox';
-}
-
-.nav-link-list {
-  composes: nav from '@xo-union/tk-css-bootstrap/lib/nav';
-  composes: justify-content-center from '@xo-union/tk-css-utilities/lib/flexbox';
-}
-
-.link-url {
-  &:hover, &:focus {
-    color: safe-gray-5;
-    opacity: .6;
-    outline: none;
-  }
-}
-
-.nav-item-text {
-  composes: sans-serif font-down-1 from '@xo-union/tk-css-typography';
-  composes: d-inline-block from '@xo-union/tk-css-utilities/lib/display';
-  margin-top: 8px;
-  margin-bottom: 0;
-}
-
-.nav-item {
-  padding: 0 .75rem;
-}
-
-.xo-logo, .tb-logo {
-  composes: font-up-4 from '@xo-union/tk-css-typography';
-}
-
-.footer-nav {
-  font-size: 14px;
-}
-
-.divider {
-  composes: nav-item;
-  font-size: 1.3rem;
-}
-
-.heart-icon {
-  composes: coral-fg from '@xo-union/tk-css-colors/lib/utilities';
-  composes: font-down-2 from '@xo-union/tk-css-typography';
-
-  margin-left: 10px;
-}
-
-.nav-sentence-container {
-  composes: nav-item-text;
-  line-height: 1.9em;
-  margin-top: 0px;
-
-  & > :not(.keep-vertical-position) {
-    vertical-align: top;
-    margin-top: 3px;
-    display: inline-block;
-  }
-
-  & > :not(:first-child) {
-    margin-left: 6px;
-  }
-}
+@value ( nav-item-list, nav-item, nav-item-text, nav-link ) from './nav';
+@value ( footer ) from './footer';
