--- a/packages/@xo-union/tk-component-icons/src/css/index.css
+++ b/packages/@xo-union/tk-component-icons/src/css/index.css
@@ -1,48 +1,13 @@
-.icon {
-  display: inline-block;
-  height: 1em;
-  width: 1em;
-  stroke-width: 0;
-  stroke: currentColor;
-  fill: currentColor;
-}
-
-.icon-tk-logo {
-  width: 3.083984375em;
-}
-
-.icon-caret-right {
-  width: 0.408203125em;
-}
-
-.icon-caret-left {
-  width: 0.408203125em;
-}
-
-.icon-xo-logo {
-  width: 4.669921875em;
-}
-
-.icon-tn-logo {
-  width: 4.603515625em;
-}
-
-.icon-tb-logo {
-  width: 1.810546875em;
-}
-
-.icon-k-logo {
-  width: 0.5625em;
-}
-
-.icon-conversations-inactive {
-  width: 1.0595703125em;
-}
-
-.icon-notification-bubble {
-  width: 1.0185546875em;
-}
-
-.icon-conversation {
-  width: 1.0185546875em;
-}
+@value (
+  icon,
+  icon-tk-logo,
+  icon-caret-right,
+  icon-caret-left,
+  icon-xo-logo,
+  icon-tn-logo,
+  icon-tb-logo,
+  icon-k-logo,
+  icon-conversations-inactive,
+  icon-notification-bubble,
+  icon-conversation
+) from './icons';
