--- a/packages/@xo-union/tk-css-typography/src/modules/font-weights.scss
+++ b/packages/@xo-union/tk-css-typography/src/modules/font-weights.scss
@@ -1,22 +1,14 @@
-.serif-light
-{
+.serif-light {
   font-family: $font-family-serif;
   font-weight: 300;
 }
 
-.serif-med
-{
+.serif-med {
   font-family: $font-family-serif;
   font-weight: 500;
 }
 
-.sans-serif
-{
+.sans-serif {
   font-family: $font-family-sans-serif;
   font-weight: 400;
-}
-
-.sans-serif-med {
-  font-family: $font-family-sans-serif;
-  font-weight: 500;
 }
