Footer SEO Links section (#146)
* First iteration of <SEOSection />

* Updates SEO link examples in docs

* Fix lint build

* [skip ci] Remove extra space

* Refactor <SEOSection /> name

* Refactor SEOSection SCSS

--- a/packages/@xo-union/tk-component-footer-nav/src/css/index.scss
+++ b/packages/@xo-union/tk-component-footer-nav/src/css/index.scss
@@ -19,5 +19,12 @@
   keep-vertical-position
 ) from './business-section';
 
+@value (
+  seo-row,
+  seo-col,
+  seo-section,
+  seo-section-container
+) from './seo-section';
+
 @value ( nav-item-list, nav-item, nav-item-text, nav-link ) from './nav';
 @value ( footer ) from './footer';
