Analytics for tools menu button (#152)
* Add analytics for tools menu button

Introduced:
- Hotspot utility
- New click role in HeaderNav (toggle-sub-menu)
- Configured HeaderNav analytics to leverage new click role

* Add tests for analytics tools button

Additionaly:
- Standardized sub-menu name

* WIP Start documenting Hotspot utility

* WIP Fix grammatical error on Hotspot documentation

* Remove hot spot demo file

Demo will be added in a separate PR

* Add new line at end of hotspot.scss file

--- a/packages/@xo-union/tk-component-header-nav/src/css/icons.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/icons.scss
@@ -30,6 +30,7 @@
 
 .icon-button {
   composes: d-flex from '@xo-union/tk-css-utilities/lib/display';
+  composes: hotspot from '@xo-union/tk-css-utilities/lib/hotspot';
   composes: button-reset from './resets';
 }
 
