--- a/packages/@xo-union/tk-component-header-nav/src/css/icons.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/icons.scss
@@ -30,7 +30,7 @@
 
 .icon-button {
   composes: d-flex from '@xo-union/tk-css-utilities/lib/display';
-  composes: hotspot from '@xo-union/tk-css-utilities/lib/hotspot';
+  composes: disable-children-pointer-events from '@xo-union/tk-css-utilities/lib/pointer-events';
   composes: button-reset from './resets';
 }
 
