--- a/docs/articles/__shared__/shared-list-demo.scss
+++ b/docs/articles/__shared__/shared-list-demo.scss
@@ -1,4 +1,4 @@
-.demo {
+.list-demo {
   composes: nav from '@xo-union/tk-css-bootstrap/lib/nav';
   composes: flex-column from '@xo-union/tk-css-utilities/lib/flexbox';
 
@@ -6,4 +6,3 @@
     margin-bottom: 1em;
   }
 }
-
