Expose Utilities in top level nav (#168)
* Export utilities in pattern library nav

* Update SubNavWithGroups specs

* Fix lint build

--- a/docs/src/components/HeaderNav/Nav/styles.css
+++ b/docs/src/components/HeaderNav/Nav/styles.css
@@ -8,6 +8,6 @@
 
 .groups-container {
   composes: d-flex from '@xo-union/tk-css-utilities/lib/display';
-  composes: justify-content-between from '@xo-union/tk-css-utilities/lib/flexbox';
+  composes: justify-content-center from '@xo-union/tk-css-utilities/lib/flexbox';
   composes: font-down-1 from '@xo-union/tk-css-typography';
 }
