--- a/docs/src/components/HeaderNav/ids.css
+++ b/docs/src/components/HeaderNav/ids.css
@@ -2,4 +2,6 @@
 #primary-nav,
 #primary-nav-pattern-library,
 #secondary-nav-content-pattern,
-#secondary-nav-core-components { }
+#secondary-nav-core-components,
+#secondary-nav-utilities
+{ }
