Establish __private_modules__ convention (#167)
* Establish __private_modules__ convention

* [skip ci] Fix link to __private_modules__ and pods

* Disable unhelpful lint rule

--- a/packages/@xo-union/tk-component-header-nav/src/css/_device-mixins.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/_device-mixins.scss
@@ -1,4 +1,4 @@
-@import '~__shared__/bootstrap-sass';
+@import '~@shared/bootstrap-sass-mixins-and-variables';
 
 @mixin in-desktop() {
   @include media-breakpoint-up(md) {
