--- a/packages/@xo-union/tk-css-bootstrap/src/reboot.scss
+++ b/packages/@xo-union/tk-css-bootstrap/src/reboot.scss
@@ -1,4 +1,4 @@
-@import '~__shared__/bootstrap-sass';
+@import '~@shared/bootstrap-sass-mixins-and-variables';
 @import '~bootstrap/scss/normalize';
 @import '~bootstrap/scss/reboot';
 
