--- a/docs/_/@components/InstallSnippet/ChangeLog/style.scss
+++ b/docs/_/@components/InstallSnippet/ChangeLog/style.scss
@@ -1,5 +1,5 @@
-@value ( purpulish-gray ) from '@components/Snippet/styles';
+@value ( purpulish-gray ) from '@styles/colors';
 
-.releases-section {
+.change-log {
   background-color: purpulish-gray;
 }
